# ai-talent-sourcing-agent

./: .env  .env.example  HM_SUMMARY_FEATURE.md  ICRA_IMPLEMENTATION_SUMMARY.md  ICRA_README.md  README.md  UPDATE_SUMMARY.md  USAGE.md  app.py  config.yaml  demo_hm_summary.py  discovered_candidates.json  example_icra_search.py  example_with_evaluation.py  examples.py  interactive_cli.py  pyproject.toml  quick_icra_scan.py  setup.py  test_framework.py
ai_talent_sourcing_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/: __init__.py  ai_evaluator.py  orchestrator.py  sourcing_agent.py
src/api/: __init__.py  arxiv_client.py  base_client.py  github_client.py  linkedin_client.py
src/models/: candidate.py
src/utils/: config.py
templates/: index.html
tests/: test_sourcing_agent.py
